init webpack & babel

--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/osabl/webpack-template/issues"
   },
-  "homepage": "https://github.com/osabl/webpack-template#readme"
+  "homepage": "https://github.com/osabl/webpack-template#readme",
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
+    "path": "^0.12.7",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  }
 }
