--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "My webpack template.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --config ./webpack/webpack.dev.conf.js",
+    "build": "webpack --config ./webpack/webpack.build.conf.js",
+    "start": "webpack-dev-server --open --config ./webpack/webpack.dev.conf.js"
   },
-  "browserlist": [
+  "browserslist": [
     "> 1%",
     "last 3 version"
   ],
@@ -29,9 +31,13 @@
     "@babel/preset-env": "^7.8.4",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
@@ -40,6 +46,7 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   }
 }
