--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "My webpack template.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config ./webpack/webpack.dev.conf.js",
-    "build": "webpack --config ./webpack/webpack.build.conf.js",
-    "start": "webpack-dev-server --open --config ./webpack/webpack.dev.conf.js"
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
+    "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
   },
   "browserslist": [
     "> 1%",
@@ -33,6 +35,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
@@ -47,8 +50,8 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "webpack-dev-server": "^3.10.3"
   }
 }
