--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "cssnano": "^4.1.10",
     "file-loader": "^5.1.0",
     "html-beautify-webpack-plugin": "^1.0.5",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
+    "pug-html-loader": "^1.1.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
