--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
+    "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
