--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "serve": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
     "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
   },
